--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "switch-js",
+  "name": "@ktalebian/switch",
   "version": "0.1.0",
   "dependencies": {
     "@types/node": "^12.0.0",
