--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "dependencies": {
     "@types/node": "^12.0.0",
+    "babel-preset-es2015": "^6.24.1",
     "typescript": "^3.4.5"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
   ],
   "scripts": {
     "test": "jest",
+    "test:watch": "jest --watch",
     "prebuild": "rm -rf dist",
     "build": "tsc"
   }
