--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,22 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "rootDir": "src",
     "target": "es5",
     "module": "commonjs",
     "outDir": "build",
     "sourceMap": false,
-    "emitDecoratorMetadata": true,
     "declaration": true,
-    "experimentalDecorators": true,
+    "strict": false,
     "removeComments": true,
-    "noImplicitAny": false,
-    "suppressImplicitAnyIndexErrors": false,
-    "baseUrl": "./src",
-    "listFiles": true,
-    "noImplicitUseStrict": false
+    "paths": {
+      "app/*": [
+        "src/*"
+      ],
+      "tests/*": [
+        "tests/*"
+      ]
+    }
   },
   "include": [
     "src/**/*"
