--- a/package.json
+++ b/package.json
@@ -1,31 +1,28 @@
 {
   "name": "@ktalebian/switch",
   "version": "0.1.0",
-  "dependencies": {
-    "@types/node": "^12.0.0",
-    "babel-preset-es2015": "^6.24.1",
-    "typescript": "^3.4.5"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "@babel/preset-typescript": "^7.3.3",
-    "@types/jest": "^24.0.12",
-    "babel-register": "^6.26.0",
-    "jest": "^24.7.1",
-    "ts-jest": "^24.0.2",
-    "ts-node": "^8.1.0"
-  },
   "license": "ISC",
-  "main": "build/index.js",
-  "types": "build/index.d.ts",
   "files": [
     "build"
   ],
+  "main": "build/index.js",
+  "types": "build/index.d.ts",
   "scripts": {
+    "prebuild": "rm -rf build",
+    "build": "tsc",
     "test": "jest",
     "test:watch": "jest --watch",
-    "prebuild": "rm -rf dist",
-    "build": "tsc"
+    "lint": "tslint --project tsconfig.json",
+    "lint:fix": "tslint --project tsconfig.json --fix"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "@types/jest": "^24.0.12",
+    "@types/node": "^12.0.0",
+    "jest": "^24.7.1",
+    "ts-jest": "^24.0.2",
+    "ts-node": "^8.1.0",
+    "tslint": "^5.16.0",
+    "typescript": "^3.4.5"
   }
 }
