--- a/package.json
+++ b/package.json
@@ -10,17 +10,24 @@
   "scripts": {
     "prebuild": "rm -rf build",
     "build": "tsc",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "coverage": "codecov",
     "lint": "tslint --project tsconfig.json",
     "lint:fix": "tslint --project tsconfig.json --fix",
-    "coverage": "codecov"
+    "test": "jest",
+    "test:watch": "jest --watch"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint",
+      "pre-push": "npm run test"
+    }
   },
   "dependencies": {},
   "devDependencies": {
     "@types/jest": "^24.0.12",
     "@types/node": "^12.0.0",
     "codecov": "^3.4.0",
+    "husky": "^2.2.0",
     "jest": "^24.7.1",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.1.0",
