--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ after_success:
 cache: npm
 deploy:
   provider: npm
-  email: kousha.talebian@gmail.com
+  email: "$NPM_EMAIL"
+  api_key: "$NPM_TOKEN"
   on:
     tags: true
     repo: ktalebian/switch
