--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "codecov": "^3.5.0",
     "husky": "^3.0.0",
     "jest": "^24.8.0",
+    "lodash": "^4.17.14",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
