--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "url": "git://github.com/ktalebian/switch.git"
   },
   "license": "ISC",
+  "author": "Kousha Talebian <k@ousha.me>",
   "files": [
     "build"
   ],
@@ -38,5 +39,6 @@
     "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
     "typescript": "^3.5.3"
-  }
+  },
+  "reveal": true
 }
