--- a/.eslintrc
+++ b/.eslintrc
@@ -3,8 +3,8 @@
     "twilio-ts"
   ],
   "rules": {
-    "import/prefer-default-export": 0,
     "@typescript-eslint/no-explicit-any": 0,
-    "@typescript-eslint/interface-name-prefix": 0
+    "@typescript-eslint/interface-name-prefix": 0,
+    "import/no-unused-modules": "off"
   }
 }
